--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@ for free such as playing any song you desire or making moderation of your server
     <meta property="og:image:height" content="64" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/images/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Athena - Discord Bot</title>
+    <title>Athena - The Discord Bot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
