Bunch of code imporvements implemented in server

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,6 +30,6 @@ for free such as playing any song you desire or making moderation of your server
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="__athena"></div>
   </body>
 </html>
